//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  role UserRole [not null]
  name String [not null]
  email String [unique, not null]
  emailVerified Boolean [not null]
  image String
  phone String
  gender Gender
  dateOfBirth DateTime
  signupMethod SignupMethodType[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  referralCode String [unique]
  referredById String
  referredUsers User [not null]
  referredBy User
  addresses Address [not null]
  cart Cart
  orders Order [not null]
  managedStore Store
  storeId String
  store Store
  sessions Session [not null]
  accounts Account [not null]
  stores Store [not null]
  vouchers Voucher [not null]
}

Table Session {
  id String [pk]
  expiresAt DateTime [not null]
  token String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user User [not null]
}

Table Account {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  user User [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Verification {
  id String [pk]
  identifier String [not null]
  value String [unique, not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  metadata Json
}

Table Address {
  id String [pk]
  isDefault Boolean [not null, default: false]
  label String [not null]
  address String [not null]
  city String [not null]
  province String [not null]
  postalCode String [not null]
  recipient String [not null]
  phone String [not null]
  latitude Float
  longitude Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isActive Boolean [not null, default: true]
  user User [not null]
  userId String [not null]
  orders Order [not null]
}

Table Store {
  id String [pk]
  name String [not null]
  address String [not null]
  city String [not null]
  province String [not null]
  postalCode String [not null]
  latitude Float [not null]
  longitude Float [not null]
  maxDistance Float [not null, default: 10]
  isActive Boolean [not null, default: true]
  isMain Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  adminId String [unique]
  admin User
  inventory Inventory [not null]
  orders Order [not null]
  discounts Discount [not null]
  users User [not null]
  user User [not null]
}

Table Category {
  id String [pk]
  name String [unique, not null]
  description String
  image String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products Product [not null]
}

Table Product {
  id String [pk]
  name String [unique, not null]
  description String
  price Decimal [not null]
  weight Float
  sku String [unique, not null]
  categoryId String [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category Category [not null]
  images ProductImage [not null]
  inventory Inventory [not null]
  orderItems OrderItem [not null]
  cartItems CartItem [not null]
  discounts Discount [not null]
  vouchers Voucher [not null]
}

Table ProductImage {
  id String [pk]
  productId String [not null]
  imageUrl String [not null]
  isMain Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  product Product [not null]
}

Table Inventory {
  id String [pk]
  productId String [not null]
  storeId String [not null]
  quantity Int [not null]
  minStock Int [not null, default: 5]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  store Store [not null]
  stockJournals StockJournal [not null]

  indexes {
    (productId, storeId) [unique]
  }
}

Table PaymentGateway {
  id String [pk]
  orderId String [unique, not null]
  provider String [not null]
  token String [not null]
  redirectUrl String
  expiresAt DateTime
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
}

Table PaymentTransaction {
  id String [pk]
  orderId String [not null]
  amount Decimal [not null]
  status PaymentStatus [not null]
  provider String [not null]
  providerTransactionId String
  providerOrderId String
  paymentMethod String
  transactionTime DateTime [not null]
  rawResponse String
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
}

Table StockJournal {
  id String [pk]
  inventoryId String [not null]
  quantity Int [not null]
  type StockJournalType [not null]
  notes String
  referenceId String
  createdBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  inventory Inventory [not null]
}

Table Cart {
  id String [pk]
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  items CartItem [not null]
}

Table CartItem {
  id String [pk]
  cartId String [not null]
  productId String [not null]
  quantity Int [not null]
  addedAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cart Cart [not null]
  product Product [not null]
}

Table Order {
  id String [pk]
  orderNumber String [unique, not null]
  userId String [not null]
  storeId String [not null]
  addressId String [not null]
  shippingMethodId String [not null]
  shippingAddress String [not null]
  recipientName String [not null]
  recipientPhone String [not null]
  city String [not null]
  province String [not null]
  postalCode String [not null]
  status OrderStatus [not null, default: 'WAITING_PAYMENT']
  subtotal Decimal [not null]
  shippingCost Decimal [not null]
  discount Decimal [not null, default: 0]
  total Decimal [not null]
  paymentMethod PaymentMethod [not null]
  paymentStatus PaymentStatus [not null, default: 'PENDING']
  shippingMethod String [not null]
  trackingNumber String
  notes String
  expiresAt DateTime
  cancelReason String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  statusHistory Json
  lastStatusChange DateTime [default: `now()`, not null]
  lastChangedBy String
  user User [not null]
  store Store [not null]
  address Address [not null]
  shippingOption ShippingMethod [not null]
  items OrderItem [not null]
  appliedVouchers OrderVoucher [not null]
  paymentProofs PaymentProof [not null]
  PaymentTransaction PaymentTransaction [not null]
  PaymentGateway PaymentGateway
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  price Decimal [not null]
  discount Decimal [not null, default: 0]
  subtotal Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
  product Product [not null]
}

Table PaymentProof {
  id String [pk]
  orderId String [not null]
  filePath String [not null]
  status PaymentProofStatus [not null, default: 'PENDING']
  notes String
  uploadedAt DateTime [default: `now()`, not null]
  verifiedAt DateTime
  verifiedBy String
  order Order [not null]
}

Table ShippingMethod {
  id String [pk]
  name String [unique, not null]
  description String [not null, default: '']
  baseCost Decimal [not null, default: 0]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders Order [not null]
}

Table Discount {
  id String [pk]
  storeId String [not null]
  name String [not null]
  description String
  type DiscountType [not null]
  isPercentage Boolean
  value Decimal
  maxDiscount Decimal
  minPurchase Decimal
  buyQuantity Int
  getQuantity Int
  startDate DateTime [not null]
  endDate DateTime [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  store Store [not null]
  products Product [not null]
}

Table Voucher {
  id String [pk]
  code String [unique, not null]
  name String [not null]
  description String
  type VoucherType [not null]
  valueType ValueType [not null]
  value Decimal [not null]
  minPurchase Decimal
  maxDiscount Decimal
  startDate DateTime [not null]
  endDate DateTime [not null]
  isActive Boolean [not null, default: true]
  isForShipping Boolean [not null, default: false]
  maxUsage Int
  usageCount Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  products Product [not null]
  users User [not null]
  orderVouchers OrderVoucher [not null]
}

Table OrderVoucher {
  id String [pk]
  orderId String [not null]
  voucherId String [not null]
  discount Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  order Order [not null]
  voucher Voucher [not null]

  indexes {
    (orderId, voucherId) [unique]
  }
}

Table StoreToUser {
  storesId String [ref: > Store.id]
  usersId String [ref: > User.id]
}

Table UserVoucher {
  vouchersId String [ref: > Voucher.id]
  usersId String [ref: > User.id]
}

Table ProductDiscount {
  discountsId String [ref: > Discount.id]
  productsId String [ref: > Product.id]
}

Table ProductVoucher {
  vouchersId String [ref: > Voucher.id]
  productsId String [ref: > Product.id]
}

Enum UserRole {
  USER
  ADMIN
  SUPER
}

Enum SignupMethodType {
  CREDENTIAL
  SOCIAL
}

Enum OrderStatus {
  WAITING_PAYMENT
  WAITING_PAYMENT_CONFIRMATION
  PROCESSING
  SHIPPED
  CONFIRMED
  CANCELLED
}

Enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

Enum PaymentProofStatus {
  PENDING
  VERIFIED
  REJECTED
}

Enum PaymentMethod {
  BANK_TRANSFER
  PAYMENT_GATEWAY
}

Enum StockJournalType {
  ADDITION
  SUBTRACTION
  TRANSFER
  SALE
  RETURN
  ADJUSTMENT
}

Enum DiscountType {
  NO_RULES_DISCOUNT
  WITH_MAX_PRICE
  BUY_X_GET_Y
}

Enum VoucherType {
  PRODUCT_SPECIFIC
  SHIPPING
  REFERRAL
}

Enum ValueType {
  PERCENTAGE
  FIXED_AMOUNT
}

Enum Gender {
  MALE
  FEMALE
}

Ref: User.referredById > User.id

Ref: User.storeId - Store.id

Ref: Session.userId > User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]

Ref: Address.userId > User.id [delete: Cascade]

Ref: Store.adminId - User.id

Ref: Product.categoryId > Category.id

Ref: ProductImage.productId > Product.id [delete: Cascade]

Ref: Inventory.productId > Product.id

Ref: Inventory.storeId > Store.id

Ref: PaymentGateway.orderId - Order.id [delete: Cascade]

Ref: PaymentTransaction.orderId > Order.id [delete: Cascade]

Ref: StockJournal.inventoryId > Inventory.id

Ref: Cart.userId - User.id [delete: Cascade]

Ref: CartItem.cartId > Cart.id [delete: Cascade]

Ref: CartItem.productId > Product.id

Ref: Order.userId > User.id

Ref: Order.storeId > Store.id

Ref: Order.addressId > Address.id

Ref: Order.shippingMethodId > ShippingMethod.id

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.productId > Product.id

Ref: PaymentProof.orderId > Order.id [delete: Cascade]

Ref: Discount.storeId > Store.id

Ref: OrderVoucher.orderId > Order.id [delete: Cascade]

Ref: OrderVoucher.voucherId > Voucher.id